# HALHF_CLARA_analysis

./: .gitignore  CLARA_dataset.py  plotting.py  pyproject.toml
20260401/: plasma_interaction_analysis.ipynb
20260402/: plasma_deceleration_analysis.ipynb
src/HALHF_CLARA_analysis/: CLARA_datamanager.py  CLARA_dataset.py  __init__.py  plotting.py
utils/: colors.py
